--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Download & patch gwca.dll
         if: steps.check.outputs.run != 'false'
         run: |
-          curl -L https://raw.githubusercontent.com/gwdevhub/GWToolboxpp/${{ steps.check.outputs.tag }}/Dependencies/GWCA/bin/gwca.dll
+          curl -OL https://raw.githubusercontent.com/gwdevhub/GWToolboxpp/${{ steps.check.outputs.tag }}/Dependencies/GWCA/bin/gwca.dll
           cargo run:
 
       - name: Publish modified gwca.dll to github
