--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -35,7 +35,7 @@ jobs:
         if: steps.check.outputs.run != 'false'
         run: |
           curl -OL https://raw.githubusercontent.com/gwdevhub/GWToolboxpp/${{ steps.check.outputs.tag }}/Dependencies/GWCA/bin/gwca.dll
-          cargo run:
+          cargo run
 
       - name: Publish modified gwca.dll to github
         if: steps.check.outputs.run != 'false'
