--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -52,4 +52,5 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           name: ${{ steps.check.outputs.tag }}
+          tag_name: ${{ steps.check.outputs.tag }}
           files: gwca.dll
