--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -15,6 +15,8 @@ jobs:
       - name: Checkout repository
         if: steps.check.outputs.run != 'false'
         uses: actions/checkout@v4
+        with:
+          fetch-tags: true
 
       - name: Check for latest release
         id: check
@@ -25,10 +27,11 @@ jobs:
           echo "Latest upstream release tag: $TAG"
           echo "tag=$TAG" >> "$GITHUB_OUTPUT"
 
-          if git tag -l | grep -q "$TAG"; then
+          if git show-ref --tags --quiet --verify "refs/tags/$TAG"; then
             echo "Already processed"
             echo "run=false" >> "$GITHUB_OUTPUT"
-            exit 0
+          else
+            echo "New version detected."
           fi
 
       - name: Install rust
